ApiGateway/Stateless/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gatewayapi-deployment
spec:
  selector:
    matchLabels:
      app: gatewayapi-deployment
  replicas: 1
  template:
    metadata:
      labels:
        app: gatewayapi-deployment
    spec:
      dnsPolicy: Default
      containers:
      - name: gatewayapi
        image: lukasztomalczyk/citizenbudget.gatewayapi:1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
        volumeMounts:
          - name: config
            mountPath: /app/logs
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: logs-volume-claim
