ApiGateway/Stateless/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: apigateway-ingress
  namespace: citizen-budget 
  annotations:    
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
    #nginx.ingress.kubernetes.io/enable-cors: "true"
    kubernetes.io/ingress.allow-http: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
        - path: /
          backend:
            serviceName: gateway-expose
            servicePort: 5000
